# xmessagebus

./: LICENSE  pyproject.toml
.github/workflows/: release.yml
src/xmessagebus/: __init__.py  message_bus.py
tests/: xmessagebus_test.py
