[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "/tests",
]

[project]
name = "x-messagebus"
version = "0.1"
authors = [
    { name="Yisu Peng", email="yisupeng@gmail.com" },
]
description = "A package to publish and receive messages"
#readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/shawn-peng/x-messagebus"
"Bug Tracker" = "https://github.com/shawn-peng/x-messagebus/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/xmessagebus"]


